2010-09-02  Richard Henderson  <rth@redhat.com>

	* dwarf.c (init_dwarf_regnames_i386, init_dwarf_regnames_x86_64): New.
	(init_dwarf_regnames): Use them.
	* dwarf.h: Declare them.
	* objdump.c (dump_dwarf): Use bfd_get_arch + bfd_get_mach to set up
	the regnames, rather than using elf_machine_code.

2010-09-02  Richard Henderson  <rth@redhat.com>

	* objdump.c (dump_dwarf): Use bfd_arch_bits_per_address.

2010-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	* elfedit.c (input_elf_osabi): New.
	(output_elf_osbi): Likewise.
	(osabis): Likewise.
	(elf_osabi): Likewise.
	(update_elf_header): Support updating ELF OSABI.
	(make_qualified_name): Break long line.
	(command_line_switch): Add OPTION_INPUT_OSABI and
	OPTION_OUTPUT_OSABI.
	(options): Likewise.
	(usage): Add --input-osabi and --output-osabi.
	(main): Handle OPTION_INPUT_OSABI and OPTION_OUTPUT_OSABI.

	* doc/binutils.texi: Document --input-osabi and --output-osabi
	for elfedit.

2010-08-23  Maciej W. Rozycki  <macro@codesourcery.com>

	* readelf.c (display_mips_gnu_attribute): Replace GCC options
	with a textual description of a MIPS32r2 64-bit FPU.

2010-08-13  Dan Rosenberg  <dan.j.rosenberg@gmail.com>

	PR binutils/11889
	* readelf.c (get_32bit_elf_symbols): Check for a corrupt
	sh_entsize.
	(get_64bit_elf_symbols): Likewise.
	(process_symbol_table): Likewise.
	(process_section_groups): Check for corrupt headers.
	(process_version_sections): Check for corrupt indicies.
	(process_corefile_note_segment): Likewise.

2010-08-13  Nathan Sidwell  <nathan@codesourcery.com>

	* readelf.c (get_machine_flags): Detect CF ISA C and EMAC_B
	variants.

2010-08-13  Tom Tromey  <tromey@redhat.com>

	* dwarf.c (process_debug_info): Don't subtract section address
	when calculating location of cu abbrev within section.

2010-08-12  Michael Haubenwallner  <haubi@gentoo.org>

	PR binutils/11742
	* readelf.c (get_archive_member_name): Do not read beyond the end
	of the ar_name field.

2010-08-03  Tristan Gingold  <gingold@adacore.com>
