@@ -1,3 +1,7 @@
+2010-09-03  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* binutils-all/objdump.W: Update DW_OP_reg5 expected output.
+
 2010-08-23  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* binutils-all/elfedit-3.d: New.
