@@ -1,4 +1,10 @@
-2010-10-03  Kai Tietz  <kai.tietz@onevision.com>
+2010-09-03  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gas/elf/dwarf2-1.d: Update DW_OP_reg5 expected output.
+	* gas/elf/dwarf2-2.d: Likewise.
+	* gas/i386/dw2-compress-1.d: Likewise.
+
+2010-09-03  Kai Tietz  <kai.tietz@onevision.com>
 
 	* gas/cfi/cfi-i386.d: Use objdump -Wf instead of readelf.
 	* gas/cfi/cfi-i386.s: Remove .type directives.
